[gd_scene load_steps=3 format=2]

[ext_resource path="res://Spaces/Default/Lobby.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/panel_rect.png" type="Texture" id=2]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )

[node name="ConnectionPanel" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.172549, 0.32549, 0.580392, 1 )

[node name="TextureRect" type="TextureRect" parent="ConnectionPanel"]
modulate = Color( 0.034668, 0.125306, 0.277344, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -227.0
margin_top = -189.0
margin_right = 227.0
margin_bottom = 189.0
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="ConnectionPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -89.5
margin_top = -20.5
margin_right = 89.5
margin_bottom = 20.5

[node name="Row3" type="HBoxContainer" parent="ConnectionPanel/VBoxContainer"]
margin_right = 273.0
margin_bottom = 41.0
custom_constants/separation = 16

[node name="ServerTest" type="Button" parent="ConnectionPanel/VBoxContainer/Row3"]
margin_right = 84.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 2
text = "Offline"

[node name="Online" type="Button" parent="ConnectionPanel/VBoxContainer/Row3"]
margin_left = 100.0
margin_right = 179.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 2
text = "Online"

[node name="CheckBox" type="CheckBox" parent="ConnectionPanel/VBoxContainer/Row3"]
visible = false
margin_left = 143.0
margin_right = 179.0
margin_bottom = 41.0

[node name="Host" type="CheckBox" parent="ConnectionPanel/VBoxContainer/Row3"]
margin_left = 195.0
margin_right = 273.0
margin_bottom = 41.0
text = "Host"

[node name="ParticipantsPanel" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -200.0
margin_right = 150.0
margin_bottom = 200.0
color = Color( 0.227451, 0.282353, 0.368627, 1 )

[node name="Title" type="Label" parent="ParticipantsPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -74.0
margin_top = 20.0
margin_right = 74.0
margin_bottom = 34.0
text = "Waiting for Participants"

[node name="ParticipantList" type="ItemList" parent="ParticipantsPanel"]
margin_left = 49.0
margin_top = 59.5
margin_right = 253.0
margin_bottom = 318.5
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Start" type="Button" parent="ParticipantsPanel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -34.5
margin_top = -60.0
margin_right = 34.5
margin_bottom = -19.0
text = "Start"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="ConnectionPanel/VBoxContainer/Row3/ServerTest" to="." method="_on_servertest_pressed"]
[connection signal="pressed" from="ConnectionPanel/VBoxContainer/Row3/Online" to="." method="_on_online_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
